Ports code back to Java SE 8. Removes unused code.